# sleep-scoring-web

./: .gitignore  .pre-commit-config.yaml  AUTORESEARCH-AGENT.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  whats-next.md
.claude/: settings.json
.githooks/: pre-commit
docker/: container-structure-test-frontend.yaml  container-structure-test.yaml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docs/: ARCHITECTURE.md  FILE_INVENTORY.md  ML_CONSENSUS_LEARNING.md  TEST_SUITE_RATIONALIZATION_PLAN.md  WEB_APP_STATUS.md  auto-scoring-improvements.md
frontend/: .env.example  .size-limit.json  README.md  bunfig.toml  docker-entrypoint.sh  eslint.config.js  index.html  lighthouserc.js  nginx.conf  openapi.json  package-lock.json  package.json  playwright.config.ts  stryker.config.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  whats-next.md
prompts/: 006-review-comment-quality.md  012-review-core-services-io.md  013-review-ui-layer.md  014-review-web-frontend.md  015-review-test-coverage.md
reviews/: 002-layer-architecture-review.md  003-coding-standards-review.md  004-redux-pattern-review.md  005-data-hierarchy-review.md  007-architecture-layer-review.md  007-codebase-alignment-review.md  008-popout-fix-verification.md  008-state-management-review.md  009-data-persistence-review.md  010-coding-standards-review.md  011-consolidated-review-summary.md  012-core-services-io-review.md  013-ui-layer-review.md  014-web-frontend-review.md  015-test-coverage-review.md  016-core-services-io-review.md  016-test-coverage-review.md  016-ui-layer-review.md  web-issues-backlog.md
scripts/: backup-db.sh  check-contract-drift.sh  deploy.sh  profile.sh  restore-pitr.sh  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  mdns.rs  server.rs
src-tauri/tests/: e2e_sync.rs  mdns_integration.rs  server_integration.rs
src-tauri/tests/common/: mod.rs
(+630 files in other folders)
