[package]
name = "sleep-scoring-desktop"
version = "0.1.0"
edition = "2021"
description = "Sleep Scoring desktop app with LAN peer sync"

[lib]
name = "sleep_scoring_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
mdns-sd = "0.11"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
gethostname = "0.5"
flume = "0.11"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
